--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author-avatar: 09.jpg
 #-------------------------------
 # Contact links
 facebook:  https://facebook.com/ # Add your Facebook handle
-Linkedin:  https://www.linkedin.com/in/leping-qian-a0148721a/ # Add your Linkedin handle
+linkedin:  https://www.linkedin.com/in/leping-qian-a0148721a/ # Add your Linkedin handle
 instagram: https://www.instagram.com/light_lele_/ # Add your Facebook handle
 
 #-------------------------------
